--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="me.zhangjh.emoji.generator"
+    >
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -16,7 +18,7 @@
         android:networkSecurityConfig="@xml/net_config"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name="me.zhangjh.emoji.generator.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
