--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,16 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.10.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'com.google.android.gms:play-services-ads:22.4.0'
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-runtime:2.6.2"
+    implementation 'androidx.lifecycle:lifecycle-process:2.6.2'
+    //noinspection LifecycleAnnotationProcessorWithJava8
+    annotationProcessor "androidx.lifecycle:lifecycle-compiler:2.6.2"
+    implementation 'com.google.android.ump:user-messaging-platform:2.1.0'
+
     testImplementation 'junit:junit:4.13.2'
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
@@ -44,7 +53,6 @@ dependencies {
     implementation 'com.alibaba:fastjson:2.0.40'
     implementation 'org.apache.commons:commons-collections4:4.4'
 
-    implementation "com.google.android.gms:play-services-wallet:19.2.1"
     implementation "com.android.billingclient:billing:6.0.1"
     implementation 'com.google.guava:guava:31.0.1-android'
 
